# central

./: .gitignore  LICENSE  README.md  config.yml  flake.nix  pyproject.toml
.github/workflows/: run-tests.yml
central/: __main__.py  admin.py  buildbot.py  config.py  discord.py  events.py  git.py  github.py  ircclient.py  notifications.py  redmine.py  test_config.py  test_events.py  test_git.py  utils.py  webserver.py  wiki.py
central/github/: __init__.py  app.py  authz.py  build_status.py  fifoci_reporter.py  webhooks.py
