[tool.poetry]
name = "central"
version = "0.1.0"
description = "Dolphin's CI/CD plumbing infrastructure"
authors = ["Pierre Bourdon <delroth@dolphin-emu.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
pyyaml = "^6.0"
pypeul = "^0.3.1"
bottle = "^0.12.23"
pycrypto = "^2.6.1"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
