[tool.poetry]
name = "central"
version = "0.1.0"
description = "Dolphin's CI/CD plumbing infrastructure"
authors = ["Pierre Bourdon <delroth@dolphin-emu.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
central = "central.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
pypeul = "^0.3.1"
bottle = "^0.12.23"
requests = "^2.28.1"
pycryptodome = "^3.16.0"
mwclient = "^0.10.1"
jwt = "^1.3.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
