[project]
name = "central"
version = "0.1.0"
description = "Dolphin's CI/CD plumbing infrastructure"
authors = [{ name = "Pierre Bourdon", email = "delroth@dolphin-emu.org" }]
maintainers = [{ name = "OatmealDome", email = "oatmeal@dolphin-emu.org" }]
requires-python = "~=3.10,<3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "pyyaml~=6.0",
    "pypeul>=0.3.1,<0.4",
    "bottle>=0.13.4,<0.14",
    "requests>=2.28.1,<3",
    "pycryptodome>=3.16.0,<4",
    "mwclient>=0.10.1,<0.11",
    "jwt>=1.3.1,<2",
    "discord-py>=2.4.0,<3",
]

[project.scripts]
central = "central.__main__:main"

[dependency-groups]
dev = [
    "black>=22.12.0,<23",
    "pytest>=7.2.0,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
